# goit-pyweb-hw-01

./: .gitignore  README.md  bot.py  contacts.pkl  dockerfile  pyproject.toml
app/: book.py  cli.py  color.py  commands.py  file.py  functions.py  interface.py  manager_birthdays.py  manager_phones.py  manager_records.py  protection.py  record.py
data/: contacts.pkl
