[tool.poetry]
name = "asistant"
version = "0.1.0"
description = "Bot-asistant"
authors = ["YevheniiBaranov <j52b10i78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
cryptography = "~42.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
